# datahub-mis-dynamic

./: .gitignore  README.md  my_source_recipe.yaml  pyproject.toml
src/my_source/: custom_ingestion_source.py  learning.py  mis_source.py
tests/: api_dataset.py  conftest.py  test_custom_ingestion_source.py  test_learning.py  test_mis_source.py
tests/unit/: single_mce.json  single_mce_dataset.json
